<resources>
    <string name="app_name">Almacén SAO</string>

    <string name="error_internet">Por favor habilite su conexión a Internet para poder iniciar sesión</string>

    <!-- Strings related to login -->
    <string name="prompt_usuario">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_iniciar_sesion">Iniciar Sesion</string>
    <string name="error_field_required">Éste campo es requerido</string>
    <string name="title_login_activity">Iniciar Sesión</string>

    <string name="title_activity_main">INICIO</string>
    <string name="title_activity_set_origen">ESCRIBIR ORIGEN</string>
    <string name="title_activity_login">INICIAR SESIÓN</string>
    <string name="url">http://saoweb.grupohi.mx/ordenes_compra/</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- Mensajes -->
    <string name="msg_sincronizacion_correcta">¡Sincronización finalizada con éxito!</string>


    <!--Mensajes Impresora -->
    <string name="error_impresion">Error de Impresión</string>


    <!--Mensajes Bluetooth -->
    <string name="text_warning_bluetooth">¡Bluetooth Está apagado!</string>
    <string name="text_turn_on_bluetooth">No se podrá imprimir si el adaptador Bluetooth está apagado. Por favor encienda el adaptador Bluetooth en la configuración del dispositivo.</string>
    <string name="text_update_settingsB">Encender Ahora</string>
    <string name="mensaje_no_bluetooth">No esta Activo</string>
    <string name="text_warning_blue_is_off">Bluethooth Apagado</string>
    <string name="text_turn_on_blue">Bluethooth Prendido</string>

    <!--Printer-->
    <string name="title_connecting">Conectando&#8230;</string>
    <string name="title_not_connected">No hay impresora conectada</string>

    <string name="action_conectar">Conectar Impresora</string>
    <string name="action_desconectar">Desconectar Impresora</string>
    <string name="general_exception">Por favor verifique su conexión a internet e intentelo nuevamente</string>
    <string name="button_write">Descargar Catálogos</string>
    <string name="title_obra">Seleccionar Obra</string>
    <string name="title_activity_entrada">Entrada al Almacén</string>
    <string name="selecciona_ordencompra">Selecciona la Orden de Compra</string>
    <string name="referencia_texto">Referencia:</string>
    <string name="entrada_materiales">Materiales de la Orden de Compra, Seleccione para Recibir.</string>
    <string name="recepcion_materiales">Materiales Recibidos - Seleccione para eliminar -.</string>
    <string name="observaciones">Observaciones:</string>
    <string name="title_activity_salida">Salida de Almacén</string>

    <string name="action_settings">Settings</string>
    <string name="concepto">Concepto:</string>
    <string name="seleccionaAlmacen">Seleccione un Almacén:</string>
    <string name="salida_material">Lista de Materiales.</string>
    <string name="salida">Salida de los Siguientes Materiales:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selecciona_almacen">Selecciona un Almacén:</string>
    <string name="error_referencia">ESCRIBE UNA REFERENCIA.</string>
    <string name="error_OB">ESCRIBE UNA OBSERVACIÓN.</string>
    <string name="error_recibir">NO HAZ RECIBIDO NINGUN MATERIAL.</string>
    <string name="error_orden">DEBES SELECCIONAR UNA ORDEN DE COMPRA.</string>
    <string name="error_almacen">DEBES SELECCIONAR UN ALMACÉN.</string>
    <string name="error_entradadetalle">ERROR AL GUARDAR DATOS.</string>
    <string name="guardado">SE REGISTRO CORRECTAMENTE.</string>
    <string name="error_concepto">ESCRIBE UN CONCEPTO.</string>
    <string name="title_activity_transferencia">Transferencia de Material</string>
    <string name="title_activity_impresion">Reimpresión</string>
    <string name="title_activity_imprimir_tab">ImprimirTabActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>


</resources>
