<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_entrada"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="mx.grupohi.almacenes.almacensao.EntradaActivity"
    tools:showIn="@layout/app_bar_entrada">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <TextView
            android:id="@+id/textordencompra"
            android:layout_width="357dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/selecciona_ordencompra" />

        <Spinner
            android:id="@+id/spinner_ordencompra"
            android:layout_width="match_parent"
            android:layout_height="41dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" />

        <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                android:text="@string/referencia_texto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.31"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:id="@+id/textView7" />

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:id="@+id/textReferencia"
                    android:layout_weight="0.37"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                    android:textSize="18sp"
                    android:textStyle="normal|bold" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/entrada_materiales" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/listView_materiales_ordencompra"
                android:layout_height="120dp"
                android:scrollbars="vertical"
                android:fillViewport="true"
                android:layout_width="wrap_content"
                android:background="@color/colorlista"
                android:fastScrollAlwaysVisible="true">
            </ListView>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/recepcion_materiales" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/listView_materiales_ordencompra_temp"
                android:layout_height="120dp"
                android:scrollbars="vertical"
                android:fillViewport="true"
                android:layout_width="fill_parent"
                android:background="@color/colorlista">

            </ListView>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/observaciones"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_weight="0.23"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textStyle="normal|bold" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:id="@+id/textObservaciones"
                android:layout_weight="0.37"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textSize="18sp"
                android:textStyle="normal|bold" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <Button
                android:text="Recibir"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:id="@+id/buttonGuardar"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textSize="20sp" />
        
        </LinearLayout>


    </LinearLayout>



</ScrollView>

