<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_transferencia"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="mx.grupohi.almacenes.almacensao.TransferenciaActivity"
    tools:showIn="@layout/app_bar_transferencia">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">



        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/referencia_texto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.23"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:id="@+id/textReferenciaT"
                android:layout_weight="0.37"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textSize="18sp"
                android:textStyle="normal|bold" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="336dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:text="@string/seleccionaAlmacen"
                android:layout_weight="0.66" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/spinner_T"
                android:layout_width="match_parent"
                android:layout_height="41dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/salida_material" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/listView_lista_T"
                android:layout_height="158dp"
                android:scrollbars="vertical"
                android:fillViewport="true"
                android:layout_width="fill_parent"
                android:background="@color/colorAccent"
                android:fastScrollAlwaysVisible="true"
                tools:scrollbars="vertical">
            </ListView>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/salida" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/listView_T_materiales"
                android:layout_height="194dp"
                android:scrollbars="vertical"
                android:fillViewport="true"
                android:layout_width="fill_parent"
                android:background="@color/colorAccent"
                android:fastScrollAlwaysVisible="true"
                tools:scrollbars="vertical">

            </ListView>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/observaciones"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.23"
                android:padding="10dp"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textStyle="normal|bold" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:id="@+id/textObservacionesT"
                android:layout_weight="0.37"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textSize="18sp"
                android:textStyle="normal|bold" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <Button
                android:text="Transferir"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:id="@+id/buttonT"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textSize="20sp" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>
